--- a/styles/base.css
+++ b/styles/base.css
@@ -11,3 +11,54 @@ body {
     background-color: #f5f5f5;
     line-height: 1.8;
 }
+/* Header with Forest Gradient */
+header {
+    background: linear-gradient(to right, #4c9c2e , #e2f109);
+    padding: 1rem;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Navigation */
+nav {
+    display: flex; /* Flexbox - Required */
+    justify-content:space-evenly;
+    max-width: 800px;
+    margin: 0 auto;
+    
+}
+
+nav a {
+    color: white;
+    background-color: #1e5631;
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+    transition: all 0.3s ease;
+    font-weight: bolder;
+}
+
+nav a:hover {
+    color: azure;
+    background-color: rgba(15, 15, 15, 0.2);
+    border-radius: 4px;
+    transform: translateY(-2px);
+}
+nav a.active {
+    background-color: #000;;
+    color: yellow;
+    font-weight: bold;
+    font-size: large;
+}
+nav a::after {
+    content: "";
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #e2f109;
+    transition: width 0.3s;
+}
+nav a:hover::after {
+    width: 100%;
+}
