--- a/styles/base.css
+++ b/styles/base.css
@@ -62,3 +62,33 @@ nav a::after {
 nav a:hover::after {
     width: 100%;
 }
+    /* Footer */
+footer {
+    background: linear-gradient(to right, #1e5631, #4c9c2e);
+    color: #f5f5f5;
+    text-align: center;
+    font-size:larger;
+    padding: 2rem;
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.social-icons {
+    display: flex;
+    justify-content: center;
+    gap: 1.5rem;
+    margin-top: 0.5rem;
+}
+
+.social-icons a {
+    color:#ffffff;
+    font-size: 1.5rem;
+    transition: transform 0.3s ease;
+}
+
+.social-icons a:hover {
+    transform: translateY(-5px);
+    color: #e2f109;
+}
