--- a/styles/base.css
+++ b/styles/base.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Times New Roman', Times, sans-serif, serif; 
-    color: #333; /* First text color */
+    color: #333; 
     background-color: #f5f5f5;
     line-height: 1.8;
 }
@@ -23,7 +23,7 @@ header {
 
 /* Navigation */
 nav {
-    display: flex; /* Flexbox - Required */
+    display: flex; 
     justify-content:space-evenly;
     max-width: 800px;
     margin: 0 auto;
