--- a/styles/base.css
+++ b/styles/base.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 /*Base styles*/
 * {
     margin: 0;
@@ -6,8 +7,8 @@
 }
 
 body {
-    font-family: 'Times New Roman', Times, sans-serif, serif; 
-    color: #333; 
+    font-family: 'Montserrat', sans-serif, serif; 
+    color: #eb1212; 
     background-color: #f5f5f5;
     line-height: 1.8;
 }
