--- a/styles/about.css
+++ b/styles/about.css
@@ -48,7 +48,7 @@
     max-width: 800px;
     margin: 20px auto;
     border-collapse: collapse;
-    font-family: Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif, serif;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
