--- a/styles/base.css
+++ b/styles/base.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif, serif; 
-    color: #eb1212; 
+    color: #333;
     background-color: #f5f5f5;
     line-height: 1.8;
 }
